# stock-simulator

./: Cargo.toml  README.md
exchange/: Cargo.toml
exchange/src/: config.rs  engine.rs  exchange.rs  exchange_error.rs  lib.rs  log.rs  order.rs  stock.rs  trade_day.rs  trading_bot.rs  trading_strategy.rs  types.rs  user.rs  utils.rs
exchange/src/trading_strategy/: mod.rs  simple_random.rs  trade_random.rs
exchange/tests/: exchange_tests.rs  match_orders_test.rs  utils_tests.rs
stock_server/: Cargo.toml
stock_server/src/: main.rs
stock_server/templates/: index.html
